
    By default, Common.Logging uses a NoOpLoggerFactoryAdapter which
    supresses all output.  See section 1.3.2 of the Common.Logging
    reference manual for simple instructions to cause logging to the
    console using the Common.Logging.Simple.ConsoleOutLogger.

    As a result of this change, GT is now much quieter with respect
    to messages written to the system console.

  * Clients and Servers now log a warning when there are no registered
    ErrorEvent handlers.

  * There have been some breaks with previous API. 

      * The delegate GT.Net.ConnexionLifecycleNotification has been
        removed and replaced with System.Action<IConnexion>

      * The delegate GT.Net.NewClientHandler has had its second argument
        changed to pass an IDictionary, instead of a Dictionary

Some bugs have been fixed since GT 2.0:

  * Server.UpdateAcceptors() threw an NullRefEx as it wasn't properly
    handling case where an acceptor was inactive but the first to 
    be removed.

  * Add lock() around FlushChannelMessages (called by IStream.Flush())
    <https://papyrus.usask.ca/trac/gt/ticket/66>.

  * ClientRepeater configuration should use TickInterval, not 
    PingInterval!  <https://papyrus.usask.ca/trac/gt/ticket/64>

  * Allow Server instances to be stopped and restarted by not nilling
    clientIDs in KillAll()  <https://papyrus.usask.ca/trac/gt/ticket/60>

  * Wrap TcpTransport.ToString() to avoid throwing exceptions on
    invalid handles.

  * Ensure Server and Client are started at the end of
    StartSeparateListeningThread() <https://papyrus.usask.ca/trac/gt/ticket/56>

  * Client.Get*Stream(): check that streams are still active
    <https://papyrus.usask.ca/trac/gt/ticket/71>

  * Exposed an IStream's connexion through a Connexion property

  * UdpAccept and TcpAcceptor should now properly trap and report
    exceptions <https://papyrus.usask.ca/trac/gt/ticket/55>


=== GT 2.0 ===

GT 2.0 has undergone a significant re-architecturing from GT 1.0